--- a/startbootstrap-freelancer-gh-pages/css/freelancer.css
+++ b/startbootstrap-freelancer-gh-pages/css/freelancer.css
@@ -359,7 +359,7 @@ form .row:first-child .floating-label-form-group {
 }
 
 a {
-  color: #E58F14;
+  color: #806D35;
 }
 
 a:focus, a:hover, a:active {
@@ -368,11 +368,11 @@ a:focus, a:hover, a:active {
 
 .btn {
   border-width: 2px;
-  background-color:#E58F14
+  background-color:#806D35
 }
 
 .bg-primary {
-  background-color:#E58F14 !important;
+  background-color:#806D35 !important;
 }
 
 .bg-secondary {
@@ -388,13 +388,13 @@ a:focus, a:hover, a:active {
 }
 
 .btn-primary {
-  background-color: #E58F14;
-  border-color: #E58F14;
+  background-color: #806D35;
+  border-color: #806D35;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #E58F14;
-  border-color: #E58F14;
+  background-color: #806D35;
+  border-color: #806D35;
 }
 
 .btn-secondary {
