--- a/startbootstrap-freelancer-gh-pages/scss/_variables.scss
+++ b/startbootstrap-freelancer-gh-pages/scss/_variables.scss
@@ -12,5 +12,7 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
+$main-color:#2C2424;
+
 $primary: #18BC9C !default;
 $secondary: #2C3E50 !default;
